# CMakeTemplate

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Executable_src/: CMakeLists.txt  main.cpp
Executable_src/include/: dothing.h  sharedLibrary.h
Java_src/: CMakeLists.txt  NativeMethods.java  TopLevelWindow.java
Shared_src/: CMakeLists.txt  common.cpp  createLinuxWindow.cpp  createWin32Window.cpp  main.cpp  main.h
Static_src/: CMakeLists.txt  dothing.c  dothing.cpp
